--- a/chama-backend/package.json
+++ b/chama-backend/package.json
@@ -19,16 +19,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "africastalking": "^0.6.1",
+    "africastalking": "^0.7.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
