--- a/chama-frontend/vercel.json
+++ b/chama-frontend/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://mfms.onrender.com/api/:path*"
+      "destination": "https://mfms-1.onrender.com/api/:path*"
     }
   ]
 }
