--- a/chama-backend/package.json
+++ b/chama-backend/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.11",
     "twilio": "^4.20.0"
   },
   "devDependencies": {
