--- a/chama-frontend/vercel.json
+++ b/chama-frontend/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://mfms-1.onrender.com/api/$1"
+      "source": "/api/:path*",
+      "destination": "https://mfms-1.onrender.com/api/:path*"
     },
     {
       "source": "/(.*)",
